# llama.cpp

examples/baby-llama/: CMakeLists.txt
